--- a/home.html
+++ b/home.html
@@ -161,74 +161,8 @@
         <!-- Trending High Protein Section -->
         <section class="flex flex-col pt-2">
             <h2 class="px-5 pb-4 text-slate-900 dark:text-white text-xl font-bold leading-tight">Trending High Protein</h2>
-            <div class="grid grid-cols-2 gap-4 px-5">
-                <!-- Product Card 1 -->
-                <div class="group flex flex-col gap-2 rounded-xl bg-surface-light dark:bg-surface-dark p-3 shadow-sm border border-slate-200 dark:border-slate-800">
-                    <div class="relative w-full aspect-square rounded-lg overflow-hidden bg-slate-50 dark:bg-slate-800">
-                        <div class="absolute inset-0 bg-cover bg-center group-hover:scale-110 transition-transform duration-500" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAbX25W7s4xsff48RkJiVMyM5VkbbhxewnEeiNdCCN-Wj27lD9-3ieuNndfvTGwajgMPYe5FAr6t385IsP64dORl5bVV_kL2A3Nd42j1Z0Z67aDdbvLfDLOk7ZLiqzgeksArrvRxjTpt4R6AYfsIwrOPCfkeVB2httfKQoMFw7p6Jz_MyFvK8p1he4Cunf38AHN2Z9WAwsoUnG8Za8fnsQym3f0dHqO5N9fpqiqyQJMF3pMExENaToZxQ29DPyF3laHxM5NHSA43oRS");'></div>
-                        <div class="absolute top-2 right-2 bg-primary text-white text-[10px] font-bold px-2 py-0.5 rounded-full shadow-sm">9.8/10</div>
-                    </div>
-                    <div>
-                        <div class="flex justify-between items-start mb-1">
-                            <h3 class="text-slate-900 dark:text-white text-sm font-bold line-clamp-1">Greek Yogurt</h3>
-                        </div>
-                        <div class="flex items-center gap-2">
-                            <span class="material-symbols-outlined text-primary text-[16px]">fitness_center</span>
-                            <p class="text-slate-600 dark:text-slate-400 text-xs font-medium">15g Protein</p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Product Card 2 -->
-                <div class="group flex flex-col gap-2 rounded-xl bg-surface-light dark:bg-surface-dark p-3 shadow-sm border border-slate-200 dark:border-slate-800">
-                    <div class="relative w-full aspect-square rounded-lg overflow-hidden bg-slate-50 dark:bg-slate-800">
-                        <div class="absolute inset-0 bg-cover bg-center group-hover:scale-110 transition-transform duration-500" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuArW5DV0fICuKGX-lslZ82TcoT0PfPDE-QYYAslBNlFgae8GaSkqLDc29v0i8PMOQadElLW23CMHUTDm-Og9jWfxyXrwEoJqFop46vWVOCF2tGwtWIHpPNwnFojTLwxVykZOli7xsHK1TizyybBvnwaaT_TJ-AeR0Mr-5L5Nckn4Cy7KgTo0-jdr5z16nSDODYCxLNBw0lK0naBxk2YrKydNYecDNBpqX44DK56oIjtLVCoC2cg7DryF3N6ZaEsoG7_bgbFkJGIpPa8");'></div>
-                        <div class="absolute top-2 right-2 bg-primary text-white text-[10px] font-bold px-2 py-0.5 rounded-full shadow-sm">9.5/10</div>
-                    </div>
-                    <div>
-                        <div class="flex justify-between items-start mb-1">
-                            <h3 class="text-slate-900 dark:text-white text-sm font-bold line-clamp-1">Power Bar X</h3>
-                        </div>
-                        <div class="flex items-center gap-2">
-                            <span class="material-symbols-outlined text-primary text-[16px]">fitness_center</span>
-                            <p class="text-slate-600 dark:text-slate-400 text-xs font-medium">20g Protein</p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Product Card 3 -->
-                <div class="group flex flex-col gap-2 rounded-xl bg-surface-light dark:bg-surface-dark p-3 shadow-sm border border-slate-200 dark:border-slate-800">
-                    <div class="relative w-full aspect-square rounded-lg overflow-hidden bg-slate-50 dark:bg-slate-800">
-                        <div class="absolute inset-0 bg-cover bg-center group-hover:scale-110 transition-transform duration-500" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCSAyGLkakBERWPIz9Tmn80Y2rOF62uW14o7mhUc3f-zEOxb2fLaXNINCH2vpzumlaaHKmgiJNHCjBykCBvSfSZu-CVHepK4mtaJYe70gtyQHgZl7FJk8-qck7hGxF-FEJbtcVgA4uY33lgiVpv2AnffGivDm4F8Cx2IkWn3z-3FvRoDpuWHd_o1j8iffDHFdUiyAPMzHfKEbfRpja1ghZSvZAOy9gfoHC3egnTOLqZl1tdSrynoRZ9Zd_IPnh-cxefDsaMY9biy8x_");'></div>
-                        <div class="absolute top-2 right-2 bg-yellow-400 text-slate-900 text-[10px] font-bold px-2 py-0.5 rounded-full shadow-sm">7.2/10</div>
-                    </div>
-                    <div>
-                        <div class="flex justify-between items-start mb-1">
-                            <h3 class="text-slate-900 dark:text-white text-sm font-bold line-clamp-1">Lentil Pasta</h3>
-                        </div>
-                        <div class="flex items-center gap-2">
-                            <span class="material-symbols-outlined text-yellow-500 text-[16px]">fitness_center</span>
-                            <p class="text-slate-600 dark:text-slate-400 text-xs font-medium">12g Protein</p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Product Card 4 -->
-                <div class="group flex flex-col gap-2 rounded-xl bg-surface-light dark:bg-surface-dark p-3 shadow-sm border border-slate-200 dark:border-slate-800">
-                    <div class="relative w-full aspect-square rounded-lg overflow-hidden bg-slate-50 dark:bg-slate-800">
-                        <div class="absolute inset-0 bg-cover bg-center group-hover:scale-110 transition-transform duration-500" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAep5rjN6FqFXwDSflCtLS1Tiijx1y-euFf131hdEfIa5cV05qHWtesWkQNy1Vkp2Z0f45vt1z3S5SfKyWZ7DTf1GLC4KxwsskQ__u5VFT2NNxXPoT2qa-OoKr6LSTccs0Lou-qy7iD5xa4sSp0sbdqjWRGo4OQbEx2E6c9ssr64liMmkhs-ObTiGJmqksGx4Cn7h1vzK0OO5p8QCnFzaXAtvFDAHCISBBBUBwW6cQSmJFuCG-PqeNH6L0_6PVEl-fiHgWs8yCgoP_v");'></div>
-                        <div class="absolute top-2 right-2 bg-yellow-400 text-slate-900 text-[10px] font-bold px-2 py-0.5 rounded-full shadow-sm">6.5/10</div>
-                    </div>
-                    <div>
-                        <div class="flex justify-between items-start mb-1">
-                            <h3 class="text-slate-900 dark:text-white text-sm font-bold line-clamp-1">Soy Milk A</h3>
-                        </div>
-                        <div class="flex items-center gap-2">
-                            <span class="material-symbols-outlined text-yellow-500 text-[16px]">fitness_center</span>
-                            <p class="text-slate-600 dark:text-slate-400 text-xs font-medium">8g Protein</p>
-                        </div>
-                    </div>
-                </div>
+            <div id="trending-products-grid" class="grid grid-cols-2 gap-4 px-5">
+                <!-- Products will be loaded dynamically from CSV -->
             </div>
         </section>
 
@@ -243,7 +177,7 @@
                 </a>
                 
                 <!-- Search -->
-                <a href="#" class="flex flex-col items-center justify-center gap-1 flex-1 h-full text-slate-400 dark:text-slate-500 hover:text-slate-600 dark:hover:text-slate-300 transition-colors">
+                <a href="Zoekpagina.html" class="flex flex-col items-center justify-center gap-1 flex-1 h-full text-slate-400 dark:text-slate-500 hover:text-slate-600 dark:hover:text-slate-300 transition-colors">
                     <span class="material-symbols-outlined text-[28px]">search</span>
                     <span class="text-xs font-medium">Zoek</span>
                 </a>
@@ -262,6 +196,8 @@
             </div>
         </nav>
     </div>
+
+    <script src="home.js"></script>
 </body>
 
 </html>
