--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 </a>
                 
                 <!-- Search -->
-                <a href="#" class="flex flex-col items-center justify-center gap-1 flex-1 h-full text-slate-400 dark:text-slate-500 hover:text-slate-600 dark:hover:text-slate-300 transition-colors">
+                <a href="Zoekpagina.html" class="flex flex-col items-center justify-center gap-1 flex-1 h-full text-slate-400 dark:text-slate-500 hover:text-slate-600 dark:hover:text-slate-300 transition-colors">
                     <span class="material-symbols-outlined text-[28px]">search</span>
                     <span class="text-xs font-medium">Zoek</span>
                 </a>
