--- a/Account.html
+++ b/Account.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Account | ProteinMirror</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet"/>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script id="tailwind-config">
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              "primary": "#2D4559",
+            },
+          },
+        },
+      }
+    </script>
 
     <style>
       .app {
@@ -102,7 +114,7 @@
           <div class="space-y-3">
             <button
               class="w-full bg-[#32485C] rounded-xl px-4 py-4 flex justify-between items-center"
-              onclick="location.href='instellingen.html'"
+              onclick="location.href='Instellingenpagina.html'"
             >
               <span>App-instellingen</span>
               <span class="opacity-60">›</span>
@@ -194,6 +206,39 @@
         </section>
       </div>
     </div>
+
+    <!-- Bottom Navigation -->
+    <nav class="fixed bottom-0 left-0 right-0 bg-white dark:bg-surface-dark border-t border-slate-200 dark:border-slate-800 z-30">
+      <div class="flex items-center justify-around h-16 max-w-lg mx-auto">
+        <!-- Home -->
+        <a href="home.html" class="flex flex-col items-center justify-center gap-1 flex-1 h-full text-slate-400 dark:text-slate-500 hover:text-slate-600 dark:hover:text-slate-300 transition-colors">
+          <span class="material-symbols-outlined text-[28px]">home</span>
+          <span class="text-xs font-medium">Home</span>
+        </a>
+
+        <!-- Search -->
+        <a href="Zoekpagina.html" class="flex flex-col items-center justify-center gap-1 flex-1 h-full text-slate-400 dark:text-slate-500 hover:text-slate-600 dark:hover:text-slate-300 transition-colors">
+          <span class="material-symbols-outlined text-[28px]">search</span>
+          <span class="text-xs font-medium">Zoek</span>
+        </a>
+
+        <!-- Compare -->
+        <a href="index.html" class="flex flex-col items-center justify-center gap-1 flex-1 h-full text-slate-400 dark:text-slate-500 hover:text-slate-600 dark:hover:text-slate-300 transition-colors">
+          <span class="material-symbols-outlined text-[28px]">compare_arrows</span>
+          <span class="text-xs font-medium">Vergelijken</span>
+        </a>
+
+        <!-- Account (Active) -->
+        <a href="Account.html" class="flex flex-col items-center justify-center gap-1 flex-1 h-full text-primary transition-colors relative">
+          <span class="material-symbols-outlined text-[28px] font-bold">person</span>
+          <span class="text-xs font-bold">Account</span>
+          <div class="absolute top-0 left-1/2 -translate-x-1/2 w-12 h-1 bg-primary rounded-b-full"></div>
+        </a>
+      </div>
+    </nav>
+
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet"/>
+
     <script>
       const toggle = document.getElementById("toggleGoals");
       const editor = document.getElementById("goalsEditor");
