--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
     </style>
 </head>
 
-<body class="bg-background-light dark:bg-background-dark font-display text-slate-900 dark:text-white transition-colors duration-200">
+<body class="bg-[#2D4559] font-display text-white antialiased">
     <div class="relative flex h-full min-h-screen w-full flex-col overflow-x-hidden">
         <!-- Header -->
-        <header class="sticky top-0 z-20 flex items-center justify-between bg-surface-light/90 dark:bg-surface-dark/90 px-4 py-3 backdrop-blur-md shadow-sm">
-            <h1 class="text-xl font-extrabold leading-tight tracking-tight text-slate-900 dark:text-white">Vergelijker</h1>
+        <header class="sticky top-0 z-20 flex items-center justify-between bg-white/90 px-4 py-3 backdrop-blur-md shadow-sm">
+            <h1 class="text-xl font-extrabold leading-tight tracking-tight text-slate-900">Vergelijker</h1>
             <div class="flex items-center gap-2">
-                <button onclick="clearComparison()" class="flex h-10 w-10 items-center justify-center rounded-full bg-slate-100 text-slate-900 hover:bg-slate-200 dark:bg-slate-800 dark:text-white transition-colors">
+                <button onclick="clearComparison()" class="flex h-10 w-10 items-center justify-center rounded-full bg-slate-100 text-slate-900 hover:bg-slate-200 transition-colors">
                     <span class="material-symbols-outlined text-[24px]">refresh</span>
                 </button>
             </div>
@@ -64,15 +64,15 @@
             <!-- Product Selection -->
             <div id="selection-section" class="px-4 flex flex-col gap-4">
                 <div class="flex flex-col gap-2">
-                    <label class="text-sm font-bold text-slate-700 dark:text-slate-300">Selecteer Proteïne Product</label>
-                    <select id="protein-select" class="w-full px-4 py-3 rounded-xl bg-surface-light dark:bg-surface-dark border border-slate-200 dark:border-slate-700 text-slate-900 dark:text-white font-medium focus:outline-none focus:ring-2 focus:ring-primary transition-all">
+                    <label class="text-sm font-bold text-white">Selecteer Proteïne Product</label>
+                    <select id="protein-select" class="w-full px-4 py-3 rounded-xl bg-white border border-slate-200 text-slate-900 font-medium focus:outline-none focus:ring-2 focus:ring-primary transition-all">
                         <option value="">Kies een proteïne product...</option>
                     </select>
                 </div>
                 
                 <div class="flex flex-col gap-2">
-                    <label class="text-sm font-bold text-slate-700 dark:text-slate-300">Selecteer Normaal Product</label>
-                    <select id="normal-select" class="w-full px-4 py-3 rounded-xl bg-surface-light dark:bg-surface-dark border border-slate-200 dark:border-slate-700 text-slate-900 dark:text-white font-medium focus:outline-none focus:ring-2 focus:ring-primary transition-all">
+                    <label class="text-sm font-bold text-white">Selecteer Normaal Product</label>
+                    <select id="normal-select" class="w-full px-4 py-3 rounded-xl bg-white border border-slate-200 text-slate-900 font-medium focus:outline-none focus:ring-2 focus:ring-primary transition-all">
                         <option value="">Kies een normaal product...</option>
                     </select>
                 </div>
@@ -86,21 +86,19 @@
                         type="text" 
                         id="search-input" 
                         placeholder="Zoek producten..." 
-                        class="w-full pl-11 pr-4 py-3 rounded-xl bg-surface-light dark:bg-surface-dark border border-slate-200 dark:border-slate-700 text-slate-900 dark:text-white font-medium focus:outline-none focus:ring-2 focus:ring-primary transition-all"
+                        class="w-full pl-11 pr-4 py-3 rounded-xl bg-white border border-slate-200 text-slate-900 font-medium focus:outline-none focus:ring-2 focus:ring-primary transition-all"
                     />
                 </div>
             </div>
 
             <!-- Per 100g Toggle -->
             <div class="px-4">
-                <div class="flex h-12 w-full items-center justify-center rounded-xl bg-slate-200 dark:bg-slate-800 p-1">
-                    <label class="group relative flex h-full flex-1 cursor-pointer items-center justify-center overflow-hidden rounded-lg px-2 transition-all">
-                        <input checked class="peer invisible w-0 absolute" name="serving-type" type="radio" value="100g"/>
-                        <span class="z-10 text-sm font-bold text-slate-500 transition-colors peer-checked:text-white dark:text-slate-400 dark:peer-checked:text-white">Per 100g</span>
-                        <div class="absolute inset-0 hidden rounded-lg bg-primary shadow-sm peer-checked:block animate-in fade-in zoom-in duration-200"></div>
-                    </label>
+                <div class="flex h-12 w-full items-center justify-center rounded-xl bg-white p-1 shadow-sm">
+                    <div class="flex h-full flex-1 items-center justify-center rounded-lg px-4">
+                        <span class="text-sm font-bold text-slate-900">Per 100g</span>
+                    </div>
                 </div>
-                <p class="mt-3 text-center text-xs font-medium text-slate-500 dark:text-slate-400">
+                <p class="mt-3 text-center text-xs font-medium text-white">
                     <span class="inline-block h-2 w-2 rounded-full bg-primary mr-1"></span>
                     Betere waarden worden gemarkeerd
                 </p>
@@ -109,7 +107,7 @@
             <!-- Comparison Cards -->
             <div id="comparison-container" class="flex flex-1 overflow-x-auto hide-scrollbar px-4 gap-3 snap-x pb-4 items-start hidden">
                 <!-- Protein Product Card -->
-                <div id="protein-card" class="relative min-w-[46%] max-w-[48%] flex-shrink-0 snap-center flex flex-col rounded-2xl bg-surface-light dark:bg-surface-dark shadow-sm border border-slate-100 dark:border-slate-800 overflow-hidden group">
+                <div id="protein-card" class="relative min-w-[46%] max-w-[48%] flex-shrink-0 snap-center flex flex-col rounded-2xl bg-white shadow-lg border border-slate-100 overflow-hidden group">
                     <div class="aspect-[4/3] w-full bg-slate-100 dark:bg-slate-800 bg-cover bg-center relative" id="protein-image">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
                         <div class="absolute top-2 left-2">
@@ -153,7 +151,7 @@
                 </div>
 
                 <!-- Normal Product Card -->
-                <div id="normal-card" class="relative min-w-[46%] max-w-[48%] flex-shrink-0 snap-center flex flex-col rounded-2xl bg-surface-light dark:bg-surface-dark shadow-sm border border-slate-100 dark:border-slate-800 overflow-hidden">
+                <div id="normal-card" class="relative min-w-[46%] max-w-[48%] flex-shrink-0 snap-center flex flex-col rounded-2xl bg-white shadow-lg border border-slate-100 overflow-hidden">
                     <div class="aspect-[4/3] w-full bg-slate-100 dark:bg-slate-800 bg-cover bg-center relative" id="normal-image">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
                         <div class="absolute top-2 left-2">
@@ -200,11 +198,11 @@
             <!-- Links Section -->
             <div id="links-section" class="px-4 mt-auto hidden">
                 <div class="flex flex-col gap-3">
-                    <a id="protein-link" href="#" target="_blank" class="w-full rounded-xl bg-primary text-white p-4 flex items-center justify-between group hover:bg-[#3d5e7a] transition-colors shadow-sm font-bold">
+                    <a id="protein-link" href="#" target="_blank" class="w-full rounded-xl bg-white text-slate-900 p-4 flex items-center justify-between group hover:bg-slate-100 transition-colors shadow-lg font-bold">
                         <span>Bekijk Proteïne Product</span>
                         <span class="material-symbols-outlined">arrow_forward</span>
                     </a>
-                    <a id="normal-link" href="#" target="_blank" class="w-full rounded-xl bg-slate-600 text-white p-4 flex items-center justify-between group hover:bg-slate-700 transition-colors shadow-sm font-bold">
+                    <a id="normal-link" href="#" target="_blank" class="w-full rounded-xl bg-white text-slate-900 p-4 flex items-center justify-between group hover:bg-slate-100 transition-colors shadow-lg font-bold">
                         <span>Bekijk Normaal Product</span>
                         <span class="material-symbols-outlined">arrow_forward</span>
                     </a>
@@ -245,7 +243,7 @@
         </nav>
     </div>
 
-    <script src="app.js"></script>
+    <script src="app.js?v=6.0"></script>
 </body>
 
 </html>
