--- a/Account.html
+++ b/Account.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Account | ProteinMirror</title>
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
     <script id="tailwind-config">
       tailwind.config = {
         theme: {
           extend: {
             colors: {
-              "primary": "#2D4559",
+              primary: "#2D4559",
             },
           },
         },
-      }
+      };
     </script>
 
     <style>
@@ -36,22 +39,69 @@
   <body class="bg-[#2D4559] h-screen overflow-hidden font-sans text-white">
     <div class="app h-full overflow-y-auto pb-24">
       <!-- Header -->
-      <header class="w-full text-center py-6">
-        <h1 class="text-2xl font-bold tracking-tight">Account</h1>
-      </header>
+      <header
+  class="sticky top-0 z-20 flex items-center gap-3 bg-white px-4 py-3 shadow-sm border-b border-slate-200 mb-4"
+>
+  <button
+    onclick="history.back()"
+    class="flex h-10 w-10 items-center justify-center rounded-full text-slate-600 hover:bg-slate-100 transition-colors"
+  >
+    <span class="material-symbols-outlined text-[24px]">
+      arrow_back
+    </span>
+  </button>
+
+  <h1 class="text-xl font-bold tracking-tight text-slate-900">
+    Account
+  </h1>
+</header>
 
       <div class="w-full max-w-sm mx-auto px-6 space-y-8">
         <!-- PROFIEL -->
         <section>
-          <div class="bg-[#32485C] rounded-xl p-4">
-            <div class="font-semibold text-lg">Rosanne</div>
-            <div class="text-sm opacity-70">rosanne@email.nl</div>
-          </div>
-        </section>
+  <div
+    class="flex items-center gap-4 rounded-2xl bg-white p-4 shadow-sm border border-slate-100"
+  >
+    <!-- Avatar -->
+    <div
+      class="relative h-16 w-16 flex-shrink-0 rounded-full bg-primary/20
+             flex items-center justify-center border-2 border-primary"
+    >
+      <span class="text-xl font-extrabold text-[#2D4559]">RJ</span>
+      <div
+        class="absolute bottom-0 right-0 h-4 w-4 rounded-full bg-primary
+               border-2 border-white"
+      ></div>
+    </div>
+
+    <!-- Naam + mail -->
+    <div class="flex-1 min-w-0">
+      <h2 class="text-lg font-bold text-slate-900 truncate">
+        Rosanne de Jong
+      </h2>
+      <p class="text-sm text-slate-500 truncate">
+        rosanne@email.nl
+      </p>
+    </div>
+
+    <!-- Edit knop (optioneel, maar sterk) -->
+    <button
+      class="flex h-9 w-9 items-center justify-center rounded-full
+             border border-slate-200 text-slate-500
+             hover:text-primary hover:border-primary transition-colors"
+    >
+      <span class="material-symbols-outlined text-[20px]">edit</span>
+    </button>
+  </div>
+</section>
 
         <!-- FAVORIETEN -->
         <section>
-          <h2 class="text-sm font-semibold mb-3 opacity-80">Favorieten</h2>
+          <h3
+            class="ml-1 text-xs font-bold uppercase tracking-wider text-slate-400 pb-2"
+          >
+            Favorieten
+          </h3>
 
           <div
             class="flex gap-4 overflow-x-auto overflow-y-hidden pb-2 w-full"
@@ -91,13 +141,19 @@
 
         <!-- BONUSKAART -->
         <section>
-          <h2 class="text-sm font-semibold mb-2 opacity-80">Bonuskaart</h2>
+          <h3
+            class="ml-1 text-xs font-bold uppercase tracking-wider text-slate-400 pb-2"
+          >
+            Bonuskaart
+          </h3>
 
-          <div class="bg-[#32485C] rounded-xl p-4 space-y-2">
+          <div
+            class="rounded-2xl bg-white text-slate-900 p-4 shadow-sm border border-slate-100"
+          >
             <div class="text-sm">Albert Heijn Bonuskaart</div>
 
             <!-- STATUS -->
-            <div class="text-xs text-green-400">Gekoppeld</div>
+            <div class="text-xs text-green-600">Gekoppeld</div>
 
             <!-- OF (als niet gekoppeld) -->
             <!--
@@ -109,11 +165,15 @@
 
         <!-- INSTELLINGEN -->
         <section>
-          <h2 class="text-sm font-semibold mb-2 opacity-80">Instellingen</h2>
+          <h3
+            class="ml-1 text-xs font-bold uppercase tracking-wider text-slate-400 pb-2"
+          >
+            Instellingen
+          </h3>
 
           <div class="space-y-3">
             <button
-              class="w-full bg-[#32485C] rounded-xl px-4 py-4 flex justify-between items-center"
+              class="rounded-2xl bg-white text-slate-900 p-4 shadow-sm border border-slate-100 w-full flex items-center justify-between"
               onclick="location.href='Instellingenpagina.html'"
             >
               <span>App-instellingen</span>
@@ -122,12 +182,14 @@
 
             <!-- DOELEN -->
             <section>
-              <h2 class="text-sm font-semibold mb-2 opacity-80">
-                Huidige Doelen
-              </h2>
+              <h3
+                class="ml-1 text-xs font-bold uppercase tracking-wider text-slate-400 pb-2"
+              >
+                Huidige doelen
+              </h3>
 
               <!-- Samenvatting -->
-              <div class="bg-[#32485C] rounded-xl p-4 text-sm">
+              <div class="rounded-2xl bg-white text-slate-900 p-4 shadow-sm border border-slate-100>
                 <div class="flex flex-wrap gap-2 text-xs">
                   <span class="bg-[#2D4559] px-2 py-1 rounded-full">
                     Meer eiwitten
@@ -208,36 +270,59 @@
     </div>
 
     <!-- Bottom Navigation -->
-    <nav class="fixed bottom-0 left-0 right-0 bg-white dark:bg-surface-dark border-t border-slate-200 dark:border-slate-800 z-30">
+    <nav
+      class="fixed bottom-0 left-0 right-0 bg-white dark:bg-surface-dark border-t border-slate-200 dark:border-slate-800 z-30"
+    >
       <div class="flex items-center justify-around h-16 max-w-lg mx-auto">
         <!-- Home -->
-        <a href="home.html" class="flex flex-col items-center justify-center gap-1 flex-1 h-full text-slate-400 dark:text-slate-500 hover:text-slate-600 dark:hover:text-slate-300 transition-colors">
+        <a
+          href="home.html"
+          class="flex flex-col items-center justify-center gap-1 flex-1 h-full text-slate-400 dark:text-slate-500 hover:text-slate-600 dark:hover:text-slate-300 transition-colors"
+        >
           <span class="material-symbols-outlined text-[28px]">home</span>
           <span class="text-xs font-medium">Home</span>
         </a>
 
         <!-- Search -->
-        <a href="Zoekpagina.html" class="flex flex-col items-center justify-center gap-1 flex-1 h-full text-slate-400 dark:text-slate-500 hover:text-slate-600 dark:hover:text-slate-300 transition-colors">
+        <a
+          href="Zoekpagina.html"
+          class="flex flex-col items-center justify-center gap-1 flex-1 h-full text-slate-400 dark:text-slate-500 hover:text-slate-600 dark:hover:text-slate-300 transition-colors"
+        >
           <span class="material-symbols-outlined text-[28px]">search</span>
           <span class="text-xs font-medium">Zoek</span>
         </a>
 
         <!-- Compare -->
-        <a href="index.html" class="flex flex-col items-center justify-center gap-1 flex-1 h-full text-slate-400 dark:text-slate-500 hover:text-slate-600 dark:hover:text-slate-300 transition-colors">
-          <span class="material-symbols-outlined text-[28px]">compare_arrows</span>
+        <a
+          href="index.html"
+          class="flex flex-col items-center justify-center gap-1 flex-1 h-full text-slate-400 dark:text-slate-500 hover:text-slate-600 dark:hover:text-slate-300 transition-colors"
+        >
+          <span class="material-symbols-outlined text-[28px]"
+            >compare_arrows</span
+          >
           <span class="text-xs font-medium">Vergelijken</span>
         </a>
 
         <!-- Account (Active) -->
-        <a href="Account.html" class="flex flex-col items-center justify-center gap-1 flex-1 h-full text-primary transition-colors relative">
-          <span class="material-symbols-outlined text-[28px] font-bold">person</span>
+        <a
+          href="Account.html"
+          class="flex flex-col items-center justify-center gap-1 flex-1 h-full text-primary transition-colors relative"
+        >
+          <span class="material-symbols-outlined text-[28px] font-bold"
+            >person</span
+          >
           <span class="text-xs font-bold">Account</span>
-          <div class="absolute top-0 left-1/2 -translate-x-1/2 w-12 h-1 bg-primary rounded-b-full"></div>
+          <div
+            class="absolute top-0 left-1/2 -translate-x-1/2 w-12 h-1 bg-primary rounded-b-full"
+          ></div>
         </a>
       </div>
     </nav>
 
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
+      rel="stylesheet"
+    />
 
     <script>
       const toggle = document.getElementById("toggleGoals");
